--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
++<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,17 +10,19 @@
   <body>
     <header>
       <nav>
-        <a href="">Web<span>Studio</span></a>
+        <a href="./index.html">Web<span>Studio</span></a>
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tell:+110001111111">+11 (000) 111-11-11</a>
-      </address>
+      <ul>
+        <address>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tell:+110001111111">+11 (000) 111-11-11</a></li>
+        </address>
+      </ul>
     </header>
     <section>
       <h1>Effective Solutions for Your Business</h1>
@@ -64,26 +66,26 @@
       <ul>
         <li>
           <img
-            src="image/Rectangle1.jpg"
+            src="./image/Rectangle1.jpg"
             alt="computer"
-            width="360px"
-            height="300px"
+            width="360"
+            height="300"
           />
         </li>
         <li>
           <img
-            src="image/Rectangle.jpg"
+            src="./image/Rectangle.jpg"
             alt="phone"
-            width="360px"
-            height="300px"
+            width="360"
+            height="300"
           />
         </li>
         <li>
           <img
-            src="image/Rectangle2.jpg"
+            src="./image/Rectangle2.jpg"
             alt="phone"
-            width="360px"
-            height="300px"
+            width="360"
+            height="300"
           />
         </li>
       </ul>
@@ -93,40 +95,35 @@
       <ul>
         <li>
           <img
-            src="image/img.jpg"
+            src="./image/img.jpg"
             alt="Mark Guerrero"
-            width="264px"
-            height="260px"
+            width="264"
+            height="260"
           />
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
         </li>
         <li>
-          <img
-            src="image/img1.jpg"
-            alt="Tom Ford"
-            width="264px"
-            height="260px"
-          />
+          <img src="./image/img1.jpg" alt="Tom Ford" width="264" height="260" />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
         </li>
         <li>
           <img
-            src="image/img2.jpg"
+            src="./image/img2.jpg"
             alt="Camila Garcia"
-            width="264px"
-            height="260px"
+            width="264"
+            height="260"
           />
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
         </li>
         <li>
           <img
-            src="image/img3.jpg"
+            src="./image/img3.jpg"
             alt="Daniel Wilson"
-            width="264px"
-            height="260px"
+            width="264"
+            height="260"
           />
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
@@ -134,7 +131,7 @@
       </ul>
     </section>
     <footer>
-      <h2><a href="">Web</a>Studio</h2>
+      <a href="./index.html">Web<span>Studio</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
