--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tell:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
+        <button type="button  ">Order Service</button>
       </section>
       <section>
         <h2 hidden>Earth</h2>
@@ -67,7 +67,7 @@
         <ul>
           <li>
             <img
-              src="./image/Rectangle1.jpg"
+              src="./images/Rectangle1.jpg"
               alt="computer"
               width="360"
               height="300"
@@ -75,7 +75,7 @@
           </li>
           <li>
             <img
-              src="./image/Rectangle.jpg"
+              src="./images/Rectangle.jpg"
               alt="phone"
               width="360"
               height="300"
@@ -83,7 +83,7 @@
           </li>
           <li>
             <img
-              src="./image/Rectangle2.jpg"
+              src="./images/Rectangle2.jpg"
               alt="phone"
               width="360"
               height="300"
@@ -96,7 +96,7 @@
         <ul>
           <li>
             <img
-              src="./image/img.jpg"
+              src="./images/img.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -106,7 +106,7 @@
           </li>
           <li>
             <img
-              src="./image/img1.jpg"
+              src="./images/img1.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -116,7 +116,7 @@
           </li>
           <li>
             <img
-              src="./image/img2.jpg"
+              src="./images/img2.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -126,7 +126,7 @@
           </li>
           <li>
             <img
-              src="./image/img3.jpg"
+              src="./images/img3.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
